# eval-hub

./: .gitignore  AGENTS.md  CLAUDE.md  Containerfile  Makefile  README.md  go.mod  go.sum  package-lock.json  package.json
.claude/rules/: evalhub-mcp-service.md  evalhub-service.md
.claude/skills/fix-fvt-test/: SKILL.md
.github/workflows/: ci-python-server.yml  ci.yml  commitlint.yml  daily-cve-fixer.yml  publish-python-server.yml
cmd/eval_hub/: main.go
cmd/eval_hub/server/: server.go  server_test.go
cmd/evalhub_mcp/: main.go  main_test.go
config/providers/: garak-kfp.yaml  garak.yaml  guidellm.yaml  ibm-clear.yaml  lighteval.yaml  lm_evaluation_harness.yaml
docs/: index-private.html  index.html  openapi-internal.json  openapi-internal.yaml  openapi.json  openapi.yaml
docs/3.4EA2/: index-private.html  index-public.html  openapi-internal.json  openapi-internal.yaml  openapi.json  openapi.yaml
docs/src/: openapi.yaml
eval_runtime_sidecar/handlers/: handlers.go
eval_runtime_sidecar/proxy/: auth.go  auth_test.go  oci_auth.go
internal/abstractions/: storage.go
internal/common/: common.go
internal/config/: loader.go
internal/handlers/: collections.go  collections_test.go  evaluations.go  evaluations_test.go  handlers.go  handlers_test.go  health.go  health_test.go  helpers.go  openapi_test.go  providers.go  providers_test.go
internal/logging/: logger.go
internal/messages/: messages.go
internal/runtimes/: runtime.go
internal/storage/: storage.go
pkg/api/: common.go  evaluations.go  providers.go
pkg/evalhubclient/: client.go  client_test.go
python-server/: .gitignore  DEVELOPMENT.md  README.md  pyproject.toml
python-server/evalhub_server/: __init__.py  main.py
python-server/tests/: test_main.py
tests/features/: collections.feature  evaluation_jobs.feature  evaluations.feature  providers.feature  step_definitions_test.go
tests/kubernetes/: README.md
(+69 files in other folders)
